fix header scaling, viewport

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>MooLou, LLC</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="MooLou, LLC Landing Page">
     <meta name="keywords" content="laser cnc carving engraving personalization">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -38,7 +39,7 @@
 <body class="overflow-y-scroll">
     <div class="container">
         <div class="d-flex justify-content-center my-5">
-            <img src="https://moolou.github.io/images/moolou%20logo%20sm.jpg">
+            <img src="https://moolou.github.io/images/moolou%20logo%20sm.jpg" style="max-width:100%;">
         </div>
 
         <div class="row">
