update color, contact

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         }
 
         .bg-purple {
-            background-color: #f6ecff
+            background-color: #f6ecff;
         }
 
         .btn-outline-purple {
@@ -30,6 +30,21 @@
                 border-color: #590dfd !important;
                 background-color: #590dfd !important;
             }
+        .bg-pale-green {
+            background-color: #d1ddd2;
+        }
+
+        .btn-outline-pale-green {
+            color: #245531;
+            border-color: #245531;
+            background-color: #fff;
+        }
+
+            .btn-outline-pale-green:hover, .btn-outline-pale-green:active {
+                color: #fff !important;
+                border-color: #245531 !important;
+                background-color: #245531 !important;
+            }
 
         .cryptedmail:after {
             content: attr(data-name) "@" attr(data-domain) "." attr(data-tld);
@@ -39,18 +54,18 @@
 <body class="overflow-y-scroll">
     <div class="container">
         <div class="d-flex justify-content-center my-5">
-            <img src="https://moolou.github.io/images/moolou%20logo%20sm.jpg" style="max-width:100%;">
+            <img src="images/moolou-ep.jpg" style="max-width:100%;">
         </div>
 
         <div class="row">
             <div class="col-lg-4 d-flex align-items-stretch mb-3">
                 <div class="card">
                     <img src="images/catalog/premierleather.png" class="card-img-top" alt="Image of a leather keychain, engraved, personalized">
-                    <div class="card-body bg-purple d-flex flex-column">
+                    <div class="card-body bg-pale-green d-flex flex-column">
                         <h5 class="card-title">Leatherette Gifts & Promotional</h5>
                         <p class="card-text">Laserable Leatherette provides the appearance of real leather with less cost, offering water resistance, low maintenance, durability, and the option for personalized laser engraving!</p>
                         <div class="text-center mt-auto">
-                            <a href="https://www.premierleathergifts.com/" target="_blank" class="btn btn-outline-purple align-self-bottom">View Our Catalog</a>
+                            <a href="https://www.premierleathergifts.com/" target="_blank" class="btn btn-outline-pale-green align-self-bottom">View Our Catalog</a>
                         </div>
                     </div>
                 </div>
@@ -58,11 +73,11 @@
             <div class="col-lg-4 d-flex align-items-stretch mb-3">
                 <div class="card">
                     <img src="images/catalog/premierpersonalized.png" class="card-img-top" alt="Image of a leather keychain, engraved, personalized">
-                    <div class="card-body bg-purple d-flex flex-column">
+                    <div class="card-body bg-pale-green d-flex flex-column">
                         <h5 class="card-title">Personalized Gifts & Promotional</h5>
                         <p class="card-text">Elevate your gift-giving by adding a personal touch! Explore our diverse selection of custom gift items, perfect for creating unique and memorable tokens of appreciation, recognition, and achievement in corporate, business, holiday, and commemorative settings.</p>
                         <div class="text-center mt-auto">
-                            <a href="https://www.premierpersonalizedgifts.com/" target="_blank" class="btn btn-outline-purple align-self-bottom">View Our Catalog</a>
+                            <a href="https://www.premierpersonalizedgifts.com/" target="_blank" class="btn btn-outline-pale-green align-self-bottom">View Our Catalog</a>
                         </div>
                     </div>
                 </div>
@@ -70,11 +85,11 @@
             <div class="col-lg-4 d-flex align-items-stretch mb-3">
                 <div class="card">
                     <img src="images/catalog/premiersports.png" class="card-img-top" alt="Image of a leather keychain, engraved, personalized">
-                    <div class="card-body bg-purple d-flex flex-column">
+                    <div class="card-body bg-pale-green d-flex flex-column">
                         <h5 class="card-title">Sports & Recognition</h5>
                         <p class="card-text">Celebrate accomplishments of sports and academics by choosing from our selection of awards, trophies, plaques, ribbons, and medals, allowing you to provide them with meaningful recognition and appreciation.</p>
                         <div class="text-center mt-auto">
-                            <a href="https://www.premiersportawards.com/" target="_blank" class="btn btn-outline-purple align-self-bottom">View Our Catalog</a>
+                            <a href="https://www.premiersportawards.com/" target="_blank" class="btn btn-outline-pale-green align-self-bottom">View Our Catalog</a>
                         </div>
                     </div>
                 </div>
@@ -84,11 +99,11 @@
             <div class="col-lg-4 d-flex align-items-stretch mb-3">
                 <div class="card">
                     <img src="images/catalog/premiercrystal.png" class="card-img-top" alt="Image of a leather keychain, engraved, personalized">
-                    <div class="card-body bg-purple d-flex flex-column">
+                    <div class="card-body bg-pale-green d-flex flex-column">
                         <h5 class="card-title">Crystal & Glass</h5>
                         <p class="card-text"> Crystal and Glass Awards offer a distinguished and elegant way to recognize and honor individuals, boasting a wide selection of premium, personalized awards that make honoring coworkers, friends, and loved ones exceptionally special.</p>
                         <div class="text-center mt-auto">
-                            <a href="https://www.premiercrystal.com/" target="_blank" class="btn btn-outline-purple">View Our Catalog</a>
+                            <a href="https://www.premiercrystal.com/" target="_blank" class="btn btn-outline-pale-green">View Our Catalog</a>
                         </div>
                     </div>
                 </div>
@@ -96,11 +111,11 @@
             <div class="col-lg-4 d-flex align-items-stretch mb-3">
                 <div class="card">
                     <img src="images/catalog/premieracrylic.png" class="card-img-top" alt="Image of a leather keychain, engraved, personalized">
-                    <div class="card-body bg-purple d-flex flex-column">
+                    <div class="card-body bg-pale-green d-flex flex-column">
                         <h5 class="card-title">Premier Acrylic</h5>
                         <p class="card-text">We can provide a range of exquisite acrylic awards, corporate recognitions, and commemorative gift items, perfect for honoring remarkable achievements and expressing heartfelt appreciation!</p>
                         <div class="text-center mt-auto">
-                            <a href="https://www.premieracrylic.com/main.php" target="_blank" class="btn btn-outline-purple align-self-bottom">View Our Catalog</a>
+                            <a href="https://www.premieracrylic.com/main.php" target="_blank" class="btn btn-outline-pale-green align-self-bottom">View Our Catalog</a>
                         </div>
                     </div>
                 </div>
@@ -108,11 +123,11 @@
             <div class="col-lg-4 d-flex align-items-stretch mb-3">
                 <div class="card">
                     <img src="images/catalog/premiercorp.png" class="card-img-top" alt="Image of a leather keychain, engraved, personalized">
-                    <div class="card-body bg-purple d-flex flex-column">
+                    <div class="card-body bg-pale-green d-flex flex-column">
                         <h5 class="card-title">Corporate Collection</h5>
                         <p class="card-text">Make your corporate gifts and promotional products special with personalization. We offer a wide range of Customizable Corporate Gifts and Promotional Items.</p>
                         <div class="text-center mt-auto">
-                            <a href="https://www.premiercorporateawards.com/" target="_blank" class="btn btn-outline-purple align-self-bottom">View Our Catalog</a>
+                            <a href="https://www.premiercorporateawards.com/" target="_blank" class="btn btn-outline-pale-green align-self-bottom">View Our Catalog</a>
                         </div>
                     </div>
                 </div>
